--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Chris Lonnen
 <section id="about">
   <h1>Chris Lonnen</h1>
   <p>
-    I like solving puzzles and writing programs.<bri />
+    I like solving puzzles and writing programs.<br />
     I work for Mozilla, where these activities often overlap.
   </p>
 </section>
