--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Chris Lonnen
 ---
 
 <section id="about">
-  <h1>Chris Lonnen</h1>
+  <h1>XOR | Chris Lonnen</h1>
   <p>
     I like solving puzzles and writing programs.<br />
     I work for Mozilla, where these activities often overlap.
