--- a/index.html
+++ b/index.html
@@ -25,16 +25,26 @@ title: Chris Lonnen
 </section>
 <section id="projects">
   <h1>Things I've worked on</h1>
-  <dl>
-    <dt><a href="https://github.com/Lonnen/socorro">Socorro</a></dt>
-    <dd>A highly available cluster of cats.</dd>
-    <dt><a href="https://github.com/Lonnen/processing-js">processing-js</a></dt>
-    <dd>A port of the Processing visualization language to JavaScript.</dd>
-    <dt><a href="https://github.com/Lonnen/graphite.js">graphite.js</a></dt>
-    <dd>a javascript client library for interfacing with the graphite render api</dd>
-    <dt><a href="https://github.com/Lonnen/more-itertools">more-itertools</a></dt>
-    <dd>More routines for operating on iterables, beyond itertools</dd>
-    <dt><a href="https://github.com/Lonnen/datazine">datazine</a></dt>
-    <dd>inexpensive data publishing webapp. Pre-alpha.</dd>
-  </dl>
+  <ul>
+    <li>
+        <a href="https://github.com/Lonnen/socorro">Socorro</a>:
+        A highly available cluster of cats.
+    </li>
+    <li>
+      <a href="https://github.com/Lonnen/processing-js">processing-js</a>:
+      A port of the Processing visualization language to JavaScript.
+    </li>
+    <li>
+      <a href="https://github.com/Lonnen/graphite.js">graphite.js</a>:
+      a javascript client library for interfacing with the graphite render api
+    </li>
+    <li>
+      <a href="https://github.com/Lonnen/more-itertools">more-itertools</a>:
+      More routines for operating on iterables, beyond itertools
+    </li>
+    <li>
+      <a href="https://github.com/Lonnen/datazine">datazine</a>:
+      inexpensive data publishing webapp. Pre-alpha.
+    </li>
+  </ul>
 </section>
